style/main-ltr.css: Decreased the size of the header title on the home page with 0.2em. Prevents overflow of the title for some languages.

--- a/style/main-ltr.css
+++ b/style/main-ltr.css
@@ -431,7 +431,7 @@ code {
 
 #header_picture_homepage h1 {
     font-family: "MgOpen Cosmetica", Georgia, Times, "Times New Roman", FreeSerif, serif;
-    font-size: 3.0em;
+    font-size: 2.8em;
     color: #ffffff;
     margin-bottom: 10px;
     position: absolute;
